<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <!--Using RelativeLayout with list of LinearLayout correct here, because it does not lead
        to extra code complexity with RecyclerView (all items located on screen) and not lead
        to extra Layout pass complexity -->

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <RelativeLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mid_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mid_price_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/midPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bid_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mid_price_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bid_price_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bidPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ask_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bid_price_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask_price_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/askPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/last_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ask_price_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_price_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lastPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lowest_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_price_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowest_price_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lowestPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/highest_price_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lowest_price_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_price_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/highestPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/trade_volume_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/highest_price_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trade_volume_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tradeVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timestamp_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trade_volume_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp_caption"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_error_outline_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:text="@string/error_description"
            android:textSize="26sp" />

        <Button
            android:id="@+id/repeatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="@string/repeat" />

    </FrameLayout>
</FrameLayout>
